[package]
name = "ereader-server"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio-tungstenite = "0.15.0"
tokio = { version = "1.9.0", features = ["full"] }
futures-util = "0.3.16"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
mpd_client = "0.6.0"
base64 = "0.13.0"
